// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`"  !!map\\n #123 \\n&anchor # 456 \\n {}  " 1`] = `
flowMapping (4:2 ~ 4:4)
1 | ··!!map¶
2 | ·#123·¶
3 | &anchor·#·456·¶
4 | ·{}··¶
  |  ^^
<flowMapping>
  <tag value="tag:yaml.org,2002:map" />
  <anchor value="anchor" />
  <middleComment value="123 ">
  <middleComment value=" 456 ">
</flowMapping>
`;

exports[`"  !!map\\n #123 \\n&anchor # 456 \\n {}  " 2`] = `
comment (2:2 ~ 2:7)
1 | ··!!map¶
2 | ·#123·¶
  |  ^^^^^
3 | &anchor·#·456·¶
4 | ·{}··¶
<comment value="123 " />
`;

exports[`"  !!map\\n #123 \\n&anchor # 456 \\n {}  " 3`] = `
comment (3:9 ~ 3:15)
1 | ··!!map¶
2 | ·#123·¶
3 | &anchor·#·456·¶
  |         ^^^^^^
4 | ·{}··¶
<comment value=" 456 " />
`;

exports[`"  { : }  " 1`] = `
flowMapping (1:3 ~ 1:8)
1 | ··{·:·}··¶
  |   ^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>

    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { : }  " 2`] = `
flowMappingItem (1:5 ~ 1:6)
1 | ··{·:·}··¶
  |     ^
<flowMappingItem>
  <mappingKey>

  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { : }  " 3`] = `
mappingKey (1:5 ~ 1:5)
1 | ··{·:·}··¶
  |     ~
<mappingKey>

</mappingKey>
`;

exports[`"  { : }  " 4`] = `
mappingValue (1:5 ~ 1:6)
1 | ··{·:·}··¶
  |     ^
<mappingValue>

</mappingValue>
`;

exports[`"  { : 123 }  " 1`] = `
flowMapping (1:3 ~ 1:12)
1 | ··{·:·123·}··¶
  |   ^^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>

    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { : 123 }  " 2`] = `
flowMappingItem (1:5 ~ 1:10)
1 | ··{·:·123·}··¶
  |     ^^^^^
<flowMappingItem>
  <mappingKey>

  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  { : 123 }  " 3`] = `
mappingKey (1:5 ~ 1:5)
1 | ··{·:·123·}··¶
  |     ~
<mappingKey>

</mappingKey>
`;

exports[`"  { : 123 }  " 4`] = `
mappingValue (1:5 ~ 1:10)
1 | ··{·:·123·}··¶
  |     ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"  { ? : }  " 1`] = `
flowMapping (1:3 ~ 1:10)
1 | ··{·?·:·}··¶
  |   ^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>

    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { ? : }  " 2`] = `
flowMappingItem (1:5 ~ 1:8)
1 | ··{·?·:·}··¶
  |     ^^^
<flowMappingItem>
  <mappingKey>

  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { ? : }  " 3`] = `
mappingKey (1:5 ~ 1:6)
1 | ··{·?·:·}··¶
  |     ^
<mappingKey>

</mappingKey>
`;

exports[`"  { ? : }  " 4`] = `
mappingValue (1:7 ~ 1:8)
1 | ··{·?·:·}··¶
  |       ^
<mappingValue>

</mappingValue>
`;

exports[`"  { ? : 123 }  " 1`] = `
flowMapping (1:3 ~ 1:14)
1 | ··{·?·:·123·}··¶
  |   ^^^^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>

    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { ? : 123 }  " 2`] = `
flowMappingItem (1:5 ~ 1:12)
1 | ··{·?·:·123·}··¶
  |     ^^^^^^^
<flowMappingItem>
  <mappingKey>

  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  { ? : 123 }  " 3`] = `
mappingKey (1:5 ~ 1:6)
1 | ··{·?·:·123·}··¶
  |     ^
<mappingKey>

</mappingKey>
`;

exports[`"  { ? : 123 }  " 4`] = `
mappingValue (1:7 ~ 1:12)
1 | ··{·?·:·123·}··¶
  |       ^^^^^
<mappingValue>
  <plain value="123" />
</mappingValue>
`;

exports[`"  { ? }  " 1`] = `
flowMapping (1:3 ~ 1:8)
1 | ··{·?·}··¶
  |   ^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>

    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { ? }  " 2`] = `
flowMappingItem (1:5 ~ 1:6)
1 | ··{·?·}··¶
  |     ^
<flowMappingItem>
  <mappingKey>

  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { ? }  " 3`] = `
mappingKey (1:5 ~ 1:6)
1 | ··{·?·}··¶
  |     ^
<mappingKey>

</mappingKey>
`;

exports[`"  { ? }  " 4`] = `
mappingValue (1:6 ~ 1:6)
1 | ··{·?·}··¶
  |      ~
<mappingValue>

</mappingValue>
`;

exports[`"  { ? 123 : }  " 1`] = `
flowMapping (1:3 ~ 1:14)
1 | ··{·?·123·:·}··¶
  |   ^^^^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { ? 123 : }  " 2`] = `
flowMappingItem (1:5 ~ 1:12)
1 | ··{·?·123·:·}··¶
  |     ^^^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { ? 123 : }  " 3`] = `
mappingKey (1:5 ~ 1:10)
1 | ··{·?·123·:·}··¶
  |     ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { ? 123 : }  " 4`] = `
mappingValue (1:11 ~ 1:12)
1 | ··{·?·123·:·}··¶
  |           ^
<mappingValue>

</mappingValue>
`;

exports[`"  { ? 123 : 456 }  " 1`] = `
flowMapping (1:3 ~ 1:18)
1 | ··{·?·123·:·456·}··¶
  |   ^^^^^^^^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { ? 123 : 456 }  " 2`] = `
flowMappingItem (1:5 ~ 1:16)
1 | ··{·?·123·:·456·}··¶
  |     ^^^^^^^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  { ? 123 : 456 }  " 3`] = `
mappingKey (1:5 ~ 1:10)
1 | ··{·?·123·:·456·}··¶
  |     ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { ? 123 : 456 }  " 4`] = `
mappingValue (1:11 ~ 1:16)
1 | ··{·?·123·:·456·}··¶
  |           ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"  { ? 123 }  " 1`] = `
flowMapping (1:3 ~ 1:12)
1 | ··{·?·123·}··¶
  |   ^^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { ? 123 }  " 2`] = `
flowMappingItem (1:5 ~ 1:10)
1 | ··{·?·123·}··¶
  |     ^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { ? 123 }  " 3`] = `
mappingKey (1:5 ~ 1:10)
1 | ··{·?·123·}··¶
  |     ^^^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { ? 123 }  " 4`] = `
mappingValue (1:10 ~ 1:10)
1 | ··{·?·123·}··¶
  |          ~
<mappingValue>

</mappingValue>
`;

exports[`"  { 123 : }  " 1`] = `
flowMapping (1:3 ~ 1:12)
1 | ··{·123·:·}··¶
  |   ^^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { 123 : }  " 2`] = `
flowMappingItem (1:5 ~ 1:10)
1 | ··{·123·:·}··¶
  |     ^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { 123 : }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123·:·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123 : }  " 4`] = `
mappingValue (1:9 ~ 1:10)
1 | ··{·123·:·}··¶
  |         ^
<mappingValue>

</mappingValue>
`;

exports[`"  { 123 : 456 }  " 1`] = `
flowMapping (1:3 ~ 1:16)
1 | ··{·123·:·456·}··¶
  |   ^^^^^^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { 123 : 456 }  " 2`] = `
flowMappingItem (1:5 ~ 1:14)
1 | ··{·123·:·456·}··¶
  |     ^^^^^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  { 123 : 456 }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123·:·456·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123 : 456 }  " 4`] = `
mappingValue (1:9 ~ 1:14)
1 | ··{·123·:·456·}··¶
  |         ^^^^^
<mappingValue>
  <plain value="456" />
</mappingValue>
`;

exports[`"  { 123 }  " 1`] = `
flowMapping (1:3 ~ 1:10)
1 | ··{·123·}··¶
  |   ^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { 123 }  " 2`] = `
flowMappingItem (1:5 ~ 1:8)
1 | ··{·123·}··¶
  |     ^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { 123 }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123 }  " 4`] = `
mappingValue (1:8 ~ 1:8)
1 | ··{·123·}··¶
  |        ~
<mappingValue>

</mappingValue>
`;

exports[`"  { 123, #123\\n }  " 1`] = `
flowMapping (1:3 ~ 2:3)
1 | ··{·123,·#123¶
  |   ^^^^^^^^^^^^
2 | ·}··¶
  | ^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123">
        <trailingComment value="123">
      </plain>
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { 123, #123\\n }  " 2`] = `
flowMappingItem (1:5 ~ 1:8)
1 | ··{·123,·#123¶
  |     ^^^
2 | ·}··¶
<flowMappingItem>
  <mappingKey>
    <plain value="123">
      <trailingComment value="123">
    </plain>
  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { 123, #123\\n }  " 3`] = `
mappingKey (1:5 ~ 1:14)
1 | ··{·123,·#123¶
  |     ^^^^^^^^^
2 | ·}··¶
<mappingKey>
  <plain value="123">
    <trailingComment value="123">
  </plain>
</mappingKey>
`;

exports[`"  { 123, #123\\n }  " 4`] = `
mappingValue (1:8 ~ 1:8)
1 | ··{·123,·#123¶
  |        ~
2 | ·}··¶
<mappingValue>

</mappingValue>
`;

exports[`"  { 123, }  " 1`] = `
flowMapping (1:3 ~ 1:11)
1 | ··{·123,·}··¶
  |   ^^^^^^^^
<flowMapping>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>

    </mappingValue>
  </flowMappingItem>
</flowMapping>
`;

exports[`"  { 123, }  " 2`] = `
flowMappingItem (1:5 ~ 1:8)
1 | ··{·123,·}··¶
  |     ^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>

  </mappingValue>
</flowMappingItem>
`;

exports[`"  { 123, }  " 3`] = `
mappingKey (1:5 ~ 1:8)
1 | ··{·123,·}··¶
  |     ^^^
<mappingKey>
  <plain value="123" />
</mappingKey>
`;

exports[`"  { 123, }  " 4`] = `
mappingValue (1:8 ~ 1:8)
1 | ··{·123,·}··¶
  |        ~
<mappingValue>

</mappingValue>
`;
